--- a/src/app/pages/board/board-connector/board-connector.component.html
+++ b/src/app/pages/board/board-connector/board-connector.component.html
@@ -2,6 +2,6 @@
     [style.left.px]="data.x"
     [style.top.px]="data.y"
     [style.opacity]="data.opacity"
+    [innerHTML]="data.itemB.label"
 >
-    {{data.itemB.label}}
 </div>
