--- a/src/app/pages/board/board-connector/board-connector.component.scss
+++ b/src/app/pages/board/board-connector/board-connector.component.scss
@@ -11,17 +11,37 @@
     align-items: center;
     justify-content: center;
     font-size: 12px;
-    font-weight: 600;
+    font-weight: 550;
     padding: 5px 10px 5px 10px;
     box-shadow: none;
     transform: translate(-50%, -50%);
     white-space: nowrap;
-    
-    
-    
+    line-height: 1;
+
     &:hover {
         color: white;
         background: rgba(80, 80, 100, 0.3);
         z-index: 3;
     }
+}
+
+/* Remove <p> tag spacing */
+::ng-deep .drawn-square p {
+  margin: 0 !important;
+  padding: 0 !important;
+  display: inline !important;
+  line-height: 1 !important;
+}
+
+/* Style formatting tags */
+::ng-deep .drawn-square strong {
+  font-weight: 700 !important;
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+::ng-deep .drawn-square em {
+  font-style: italic !important;
+  margin: 0 !important;
+  padding: 0 !important;
 }
