--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,15 +13,17 @@ html {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url('https://images.unsplash.com/photo-1483728642387-6c3bdd6c93e5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2076&q=80')
+  background-image: url("https://images.unsplash.com/photo-1483728642387-6c3bdd6c93e5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2076&q=80");
 }
 
-input, h1, h3, a, span {
-  color: rgb(90, 90, 90,0.5);
+input,
+h1,
+h3,
+a {
+  color: rgb(90, 90, 90, 0.5);
   font-weight: 400;
   margin: 0px;
   padding: 0px;
-
 }
 
 .snackbar-error {
@@ -74,7 +76,7 @@ input, h1, h3, a, span {
     background-color: rgba(0, 0, 0, 0.1) !important;
     border-radius: 12px !important;
     margin: 0 0 1rem 1rem;
-    border: 1px solid rgba(255, 255, 255, 0.1)
+    border: 1px solid rgba(255, 255, 255, 0.1);
   }
 
   .mdc-snackbar__label {
@@ -82,8 +84,7 @@ input, h1, h3, a, span {
   }
 }
 
-
-[class*=underlay] {
+[class*="underlay"] {
   left: 0;
   min-height: 100%;
   min-width: 100%;
@@ -92,12 +93,11 @@ input, h1, h3, a, span {
 }
 
 .underlay-black {
-  background: rgba(0,0,0,0.5);
+  background: rgba(0, 0, 0, 0.5);
   z-index: -1;
 }
 
-
-.glass-button{
+.glass-button {
   border: 1px solid rgba(white, 0.1);
   background-color: rgba(255, 255, 255, 0.1);
   box-shadow: 2px 2px 2px rgba(black, 0.1);
@@ -112,18 +112,18 @@ input, h1, h3, a, span {
   transition: 250ms background ease-out;
   transition: 250ms border ease-out;
 
-  &:hover{
+  &:hover {
     background-color: rgba(white, 0.2);
     border: 1px solid rgba(white, 0.3);
     transition: 250ms background ease-in;
     transition: 250ms border ease-in;
-    }
   }
+}
 
-  .transparent-glass-button{
+.transparent-glass-button {
   background-color: transparent;
   border-radius: 100px;
-  border: 0.5px solid rgba(white, 0.0);
+  border: 0.5px solid rgba(white, 0);
 
   color: white;
   font-size: 1rem;
@@ -133,24 +133,23 @@ input, h1, h3, a, span {
   transition: 1000ms background ease-out;
   transition: 1000ms border ease-out;
 
-  &:hover{
+  &:hover {
     background-color: rgba(white, 0.2);
     border: 1px solid rgba(white, 0.3);
     transition: 250ms background ease-in;
     transition: 250ms border ease-in;
-    }
   }
-
+}
 
 // Tiptap editor global styles
 .tiptap {
-  height: 100%;  
+  height: 100%;
 }
 
-.board-item .title-editor{
+.board-item .title-editor {
   text-align: center;
-  font-size:xx-large;
-  border-bottom:rgba(black, 0.1);
+  font-size: xx-large;
+  border-bottom: rgba(black, 0.1);
 }
 
 .board-item .title-editor .ProseMirror,
@@ -162,7 +161,6 @@ input, h1, h3, a, span {
   color: #fff !important;
 }
 
-
 .board-item .title-editor .ProseMirror:focus,
 .board-item .content-editor .ProseMirror:focus,
 .board-item .title-editor .ProseMirror:focus-visible,
@@ -170,4 +168,3 @@ input, h1, h3, a, span {
   outline: none !important;
   box-shadow: none !important;
 }
-
