--- a/src/styles.scss
+++ b/src/styles.scss
@@ -159,6 +159,7 @@ a {
   box-shadow: none !important;
   border: none !important;
   color: #fff !important;
+  padding-right: 8px !important;
 }
 
 .board-item .title-editor .ProseMirror:focus,
